<resources>
    <string name="app_name">CafeOM</string>
    <string name="StartCooking">Սկսել</string>
    <string name="Ready">Պատրաստ է</string>
    <string name="Cooking">Խոհանոց</string>
    <string name="Enter">Մուտք</string>
    <string name="Username">Օգտագործող</string>
    <string name="Password">Գախտնաբար</string>
    <string name="ServerAddress">Սերվերի հասցե</string>
    <string name="ServerPort">Սերվերի պորտ</string>
    <string name="Save">Պահպանել</string>
    <string name="ReminderId">Հուշումների համար</string>
    <string name="AllDepartments">Բոլոր բաժինները</string>
    <string name="Kitchen">Խոհանոց</string>
    <string name="Bar">Բար</string>
    <string name="Begin">Սկսել</string>
    <string name="OK">ԱՅՈ</string>
    <string name="CANCEL">ՈՉ</string>
    <string name="Remove">Հեռացնել</string>
    <string name="ReadyOnly">Մայն պատրաստ է</string>
    <string name="Executing">Կատարվում է</string>
    <string name="NO">ՈՉ</string>
    <string name="YES">ԱՅՈ</string>
    <string name="Error">Սխալ</string>
    <string name="OrderServer">Պատվերների սերվեր</string>
    <string name="NewOrder">Նոր պատվեր</string>
    <string name="ViewOrders">Դիտել պատվերները</string>
    <string name="Quantity">Քանակ</string>
    <string name="BranchNameEmpty">Օբյեկտը նշված չէ</string>
    <string name="StoreNameEmpty">Պահեստը նշված չէ</string>
    <string name="Correction">Ուղղում</string>
    <string name="EmptyOrder">Պատվերը դատարկ է</string>
    <string name="SelectBranch">Ընտրեք պահեստը</string>
    <string name="Branch">Սրճարան</string>
    <string name="Storage">Պահեստ</string>
    <string name="PartnerOrders">Պատվերներ առաքիչներին</string>
    <string name="Empty"></string>
    <string name="SendToPartner">Ուղարկել՞ առաքիչին</string>
    <string name="HC">ՀԾ</string>
    <string name="NothigToSend">Ոչինչ չի ուղարկվելու</string>
    <string name="ExportToArmSoft">Արտահանել ՀԾ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_play_music">PlayMusicActivity</string>
</resources>
