<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Fried potato with Kankan sause"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvQty"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="3.5"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#ffd3af">

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Arandz mazer"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e9ffa7">

        <ImageButton
            android:id="@+id/btnRemove"
            android:layout_margin="@dimen/btn_margin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:background="@drawable/cancel"/>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="00:00"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTable"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="A2"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStaff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Poghosyan Poghos"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:text="@string/StartCooking"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/NO"
            android:textColor="#000000"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/YES"
            android:textColor="#000000"
            android:textStyle="bold"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"/>
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>
