<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/name"
            android:layout_marginRight="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="NAME"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/qtyShow"
            android:layout_marginRight="3dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:text="000.00" />

        <TextView
            android:id="@+id/unit"
            android:layout_marginRight="3dp"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textAlignment="textEnd"
            android:text="Unit" />

        <ImageButton
            android:id="@+id/plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="1dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qtyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quantity"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/unit1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Unit"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Correction"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/qtyCorrection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/unit2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="Unit"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/cancel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cancel" />

            <ImageButton
                android:id="@+id/remove"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="@+id/cancel"
                app:layout_constraintStart_toEndOf="@+id/cancel"
                app:layout_constraintTop_toTopOf="@+id/cancel"
                app:srcCompat="@drawable/delete" />

            <ImageButton
                android:id="@+id/add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/done" />

            <Button
                android:id="@+id/hc"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginBottom="2dp"
                android:text="@string/HC"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/btn_border"
                app:layout_constraintBottom_toBottomOf="@+id/cancel"
                app:layout_constraintStart_toEndOf="@+id/cancel"
                app:layout_constraintTop_toTopOf="@+id/cancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSeparator" />

</LinearLayout>
